<resources>
    <string name="app_name">Coin</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="databoard">Databoard</string>
    <string name="stats">Stats</string>
    <string name="history">History</string>
    <string name="total_balance">Total balance</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="easter_egg">hello from mozyr</string>
    <string name="expenses_by_category">Expenses by category</string>
    <string name="incomes_by_category">Incomes by category</string>
    <string name="amount">Amount</string>
    <string name="clear_notes_list_text">Notes\nhave\nnot\nbeen\nadded\nyet</string>
    <string name="add">Add</string>
    <string name="today">Today</string>
    <string name="date">Date</string>
    <string name="categories">Categories</string>
    <string name="swipe_left_to_delete">Swipe left to delete</string>
    <string name="categories_list_is_clear">Categories list is clear</string>
    <string name="yesterday">Yesterday</string>
    <string name="choose">Choose</string>
    <string name="incomes_or_expenses">Incomes or expenses</string>
    <string name="background_colors">Background colors</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="currency_name">Currency name</string>
    <string name="enter_amount">enter amount</string>
    <string name="choose_incomes_or_outcomes">choose incomes or outcomes</string>
    <string name="choose_category">choose category</string>
    <string name="saved">saved</string>
    <string name="enter_value">enter value</string>
    <string name="choose_date_period">Choose date period</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="cancel">Cancel</string>
</resources>